# comfy-api-service

./: .dockerignore  .env  .env.creator  .env.example  .env.supabase.example  .gitignore  API_TESTING_GUIDE.md  ARCHITECTURE.md  ARCHITECTURE_EXPLAINED.md  ASSETS.md  AUTH_IMPLEMENTATION.md  BUGFIXES.md  CLEANUP_GUIDE.md  COMFYUI_SETUP_GUIDE.md  CREATOR_ARCHITECTURE.md  DEPLOYMENT_CHECKLIST.md  DESIGN_ASSETS_GUIDE.md  DESSERT_TEST_GUIDE.md  DEVELOPMENT_LOG.md  DOCKER.md  DOCKER_QUICKSTART.md  DOCUMENTATION_INDEX.md  Dockerfile  Dockerfile.comfyui  GET_STARTED.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_SUMMARY.md  LANDING_PAGE_IMPLEMENTATION.md  LIMITS.md  MONITORING_SETUP.md  PHASE_2_PLAN.md  PRODUCTION_DEPLOYMENT.md  QUICKSTART.md  QUICKSTART_WALKTHROUGH.md  QUICK_START.md  README.md  RUNPOD_CONNECTION_SUCCESS.md  RUNPOD_DEPLOYMENT_GUIDE.md  SECURITY_TEST_REPORT.md  SESSION_SUMMARY.md  (+28 more)
.devcontainer/: Dockerfile  bootstrap.sh  devcontainer.json  startup.sh
_archive/: README.md
alembic/: env.py
config/: __init__.py  base.py  development.py  production.py  testing.py
demo/: QUICKSTART.md  README.md  image_generator.py  test_demo.sh
deploy/: README.md  create-api-key.sh  deploy-api.sh  setup-ssl.sh  setup-vps.sh
docs/: COMFYUI_WORKFLOW_GUIDE.md  DATABASE_SCHEMA.md  SETUP_COMFYUI.md  SUPABASE_SETUP.md  WORKFLOW_CONTROL_FAQ.md
infra/: docker-compose.yml
scripts/: check_available_models.py  create_migration.py  demo.sh  deploy.sh  discover_comfyui_nodes.py  generate_ai_assets.py  generate_assets.py  generate_hero_images.py  generate_simple.py  test-api.sh  (+4 more)
(+127 files in other folders)
