[tool.poetry]
name = "comfy-api-service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "apps"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.37.0"}
httpx = "^0.27.0"
arq = ">=0.25.0,<0.26.0"
redis = ">=5.0.0,<6.0.0"
minio = "^7.2.18"
prometheus-fastapi-instrumentator = "^7.1.0"
prometheus-client = "^0.23.1"
pydantic-settings = "^2.11.0"
websockets = "^15.0.1"
